# cinder-minecraft

./: .gitignore  CMakeLists.txt  PROPOSAL.md  README.md
apps/: cinder_app_main.cc
include/: game_engine.h
include/core/: block.h  block_types.h  camera.h  geometries.h  map.h  terrain_generator.h  texture.h  world.h  world_map.h
include/visualizer/: direction.h  minecraft.h
src/: game_engine.cc
src/core/: block.cc  camera.cc  map.cc  terrain_generator.cc  texture.cc  world.cc  world_map.cc
src/visualizer/: camera.cc  minecraft.cc
tests/: test_main.cc
tests/core/: camera_test.cc  world_test.cc
